[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/kernel/SANDERS_1.png" type="Texture" id=1]
[ext_resource path="res://Assets/kernel/SANDERS_2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/kernel_controller.gd" type="Script" id=3]
[ext_resource path="res://Assets/sounds/Jump_Scare.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "chase",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 23, 25.5 )

[sub_resource type="CircleShape2D" id=5]
radius = 700.0

[node name="kernel" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "chase"
frame = 1
playing = true

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 0, -6.5 )
shape = SubResource( 4 )

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 5 )

[node name="AudioJumpScare" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_CollisionArea_body_exited"]
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
